testData/highlighting/avoidDuplicatedUnusedImportReports.go
package main

import <error descr="Unused import">`pack1`</error>
import <error descr="Redeclared import"><error descr="Unused import">`pack2`</error></error>
import <error descr="Redeclared import"><error descr="Unused import">`pack3`</error></error>